Update footer contact phone and email

--- a/index.html
+++ b/index.html
@@ -805,8 +805,8 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
       </div>
       <div>
         <h3>יצירת קשר</h3>
-        <p>טלפון: 08-6001234</p>
-        <p>אימייל: hello@dorot-winery.co.il</p>
+        <p>טלפון: 0556775956</p>
+        <p>אימייל: d0556775956@gmail.com</p>
       </div>
       <div>
         <h3>שעות פעילות</h3>
