Add subtle footer credit with contact and link

--- a/index.html
+++ b/index.html
@@ -458,6 +458,23 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
   color: #f1ddd0;
 }
 
+.site-credit {
+  margin: 1.3em auto 0;
+  text-align: center;
+  font-size: 0.9rem;
+  color: rgba(241, 221, 208, 0.86);
+}
+
+.site-credit a {
+  color: #fff;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.site-credit a:hover {
+  color: #ffe7cb;
+}
+
 .faq-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -814,6 +831,7 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
         <p>ו׳: 09:00-13:00</p>
       </div>
     </div>
+    <p class="site-credit">נבנה על ידי י.ז.מ. אתרים לפרטים <a href="mailto:hidonim123@gmail.com">hidonim123@gmail.com</a> או <a href="https://hidon1.github.io/a/" target="_blank" rel="noopener noreferrer">לחץ כאן</a></p>
   </footer>
 
   <div id="imageModal" class="modal">
