Update hero logo shape and headline copy

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ header.hero {
   width: clamp(150px, 14vw, 210px);
   height: clamp(150px, 14vw, 210px);
   object-fit: contain;
-  border-radius: 50%;
+  border-radius: 18px;
   padding: 0.6em;
   background: linear-gradient(145deg, rgba(255,255,255,0.95), rgba(249, 240, 233, 0.92));
   border: 1px solid rgba(95, 29, 47, 0.16);
@@ -155,10 +155,11 @@ nav a:hover { background: var(--wine); color: #fff; transform: translateY(-1px);
 .cart-toggle.visible { display: inline-flex; align-items: center; gap: 0.35em; }
 
 .header-content { margin-top: 2em; }
-.hero-copy { max-width: 900px; }
+.hero-copy { max-width: 760px; }
 .eyebrow { margin: 0; color: var(--wine); font-weight: 700; letter-spacing: 0.08em; font-size: 0.82em; }
 .hero-copy h1 {
   margin: 0.4em 0;
+  max-width: 18ch;
   font-size: clamp(2.45rem, 4.2vw, 3.9rem);
   line-height: 1.13;
   color: var(--wine-deep);
@@ -635,7 +636,7 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
 
     <div class="header-content">
       <div class="hero-copy">
-        <h1>יין ישראלי חי ונושם<br>שנוצר לאירוח מרגש וזיכרונות טובים</h1>
+        <h1>יין ישראלי איכותי וטעים בכשרות מהודרת<br>שנוצר לאירוח מרגש וזיכרונות טובים</h1>
         <p class="subtitle">ברוכים הבאים ליקב דורות — בית ליינות בעבודת יד, לשירות אישי, ולחוויה חמה שמחברת בין כרם, משפחה ושולחן אחד מלא שמחה.</p>
         <div class="hero-actions">
           <a class="primary-btn" href="#shop">לצפייה בקולקציה החדשה</a>
