--- a/index.html
+++ b/index.html
@@ -278,6 +278,42 @@ footer p {
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   box-shadow: 0 4px 12px rgba(95, 29, 47, 0.2);
 }
+
+.card-purchase {
+  margin-top: auto;
+  background: linear-gradient(160deg, #fff, #fbf5ef);
+  border: 1px solid rgba(95, 29, 47, 0.12);
+  border-radius: 12px;
+  padding: 0.7em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6em;
+}
+
+.qty-picker {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+}
+
+.qty-chip {
+  min-width: 36px;
+  text-align: center;
+  font-weight: 700;
+  color: var(--wine-deep);
+}
+
+.qty-control-btn {
+  border: 1px solid rgba(95, 29, 47, 0.2);
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  background: #fff;
+  cursor: pointer;
+  font-size: 1.15rem;
+  color: var(--wine-deep);
+}
 .buy-btn:hover {
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(95, 29, 47, 0.3);
@@ -434,9 +470,42 @@ form button {
 }
 .cart-message.show { opacity: 1; }
 
-.modal { display: none; position: fixed; z-index: 1000; inset: 0; background-color: rgba(0, 0, 0, 0.88); }
-.modal-content { margin: 6% auto; display: block; width: min(84vw, 760px); border-radius: 10px; }
-.close-modal { position: absolute; top: 18px; right: 34px; color: #fff; font-size: 40px; cursor: pointer; }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 1.2em;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal.open { display: flex; }
+
+.modal-content {
+  display: block;
+  width: min(94vw, 980px);
+  max-height: 86vh;
+  object-fit: contain;
+  border-radius: 12px;
+}
+
+.close-modal {
+  position: absolute;
+  top: 14px;
+  right: 22px;
+  color: #fff;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.modal-caption {
+  color: #fff;
+  text-align: center;
+  margin-top: 0.8em;
+  font-size: 1rem;
+}
 
 footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); margin-top: 1.5em; }
 
@@ -790,21 +859,42 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
           <h3>קברנה 25</h3>
           <p>בלנד עשיר עם ניחוחות פטל, דובדבן ותבלין עדין. בחירה נהדרת לארוחות ערב חגיגיות ולשולחן של שישי.</p>
           <p class="price">₪80</p>
-          <button class="buy-btn add-to-cart" data-name="קברנה 25" data-price="80">הוסף לסל</button>
+          <div class="card-purchase">
+            <div class="qty-picker">
+              <button class="qty-control-btn card-qty-btn" type="button" data-action="decrease" aria-label="הפחת כמות">−</button>
+              <span class="qty-chip card-qty" aria-live="polite">1</span>
+              <button class="qty-control-btn card-qty-btn" type="button" data-action="increase" aria-label="הוסף כמות">+</button>
+            </div>
+            <button class="buy-btn add-to-cart" data-name="קברנה 25" data-price="80">רכישה לסל</button>
+          </div>
         </div>
         <div class="card">
           <img src="מרלו 25.png" alt="מרלו 25">
           <h3>מרלו 25</h3>
           <p>מרלו עגול, רך ומלטף עם פרי בשל וסיום נקי. מתאים במיוחד לפסטות עשירות, גבינות קשות ובשרים קלים.</p>
           <p class="price">₪80</p>
-          <button class="buy-btn add-to-cart" data-name="מרלו 25" data-price="80">הוסף לסל</button>
+          <div class="card-purchase">
+            <div class="qty-picker">
+              <button class="qty-control-btn card-qty-btn" type="button" data-action="decrease" aria-label="הפחת כמות">−</button>
+              <span class="qty-chip card-qty" aria-live="polite">1</span>
+              <button class="qty-control-btn card-qty-btn" type="button" data-action="increase" aria-label="הוסף כמות">+</button>
+            </div>
+            <button class="buy-btn add-to-cart" data-name="מרלו 25" data-price="80">רכישה לסל</button>
+          </div>
         </div>
         <div class="card">
           <img src="קברנה 24.png" alt="קברנה 24">
           <h3>קברנה 24</h3>
           <p>יין מורכב לבעלי חיך שאוהבים עומק: פרי כהה, קקאו ומגע עץ מדויק. מומלץ לסטייקים ולארוחות חג משפחתיות.</p>
           <p class="price">₪100</p>
-          <button class="buy-btn add-to-cart" data-name="קברנה 24" data-price="100">הוסף לסל</button>
+          <div class="card-purchase">
+            <div class="qty-picker">
+              <button class="qty-control-btn card-qty-btn" type="button" data-action="decrease" aria-label="הפחת כמות">−</button>
+              <span class="qty-chip card-qty" aria-live="polite">1</span>
+              <button class="qty-control-btn card-qty-btn" type="button" data-action="increase" aria-label="הוסף כמות">+</button>
+            </div>
+            <button class="buy-btn add-to-cart" data-name="קברנה 24" data-price="100">רכישה לסל</button>
+          </div>
         </div>
       </div>
     </section>
@@ -989,7 +1079,8 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
 
   <div id="imageModal" class="modal">
     <span class="close-modal">&times;</span>
-    <img class="modal-content" id="modalImage">
+    <img class="modal-content" id="modalImage" alt="תמונה מוגדלת">
+    <p id="modalCaption" class="modal-caption"></p>
   </div>
 
 
@@ -1303,11 +1394,33 @@ document.addEventListener("DOMContentLoaded", () => {
     announce("הפריט נוסף לסל");
   };
 
-  document.querySelectorAll(".add-to-cart").forEach((btn) => {
-    btn.addEventListener("click", () => {
-      const { name, price } = btn.dataset;
+  document.querySelectorAll(".card-purchase").forEach((purchase) => {
+    const qtyLabel = purchase.querySelector(".card-qty");
+    const plusMinusButtons = purchase.querySelectorAll(".card-qty-btn");
+    const addBtn = purchase.querySelector(".add-to-cart");
+    let selectedQty = 1;
+
+    const updateSelectedQty = () => {
+      if (qtyLabel) qtyLabel.textContent = String(selectedQty);
+    };
+
+    plusMinusButtons.forEach((btn) => {
+      btn.addEventListener("click", () => {
+        const action = btn.dataset.action;
+        if (action === "increase") selectedQty += 1;
+        if (action === "decrease") selectedQty = Math.max(1, selectedQty - 1);
+        updateSelectedQty();
+      });
+    });
+
+    addBtn?.addEventListener("click", () => {
+      const { name, price } = addBtn.dataset;
       if (!name || !price) return;
-      addToCart(name, Number(price));
+      for (let i = 0; i < selectedQty; i += 1) {
+        addToCart(name, Number(price));
+      }
+      selectedQty = 1;
+      updateSelectedQty();
     });
   });
 
@@ -1332,15 +1445,16 @@ document.addEventListener("DOMContentLoaded", () => {
       "נשמח לאישור הזמנה וחיוב.",
     ].join("\n");
 
-    const encodedSubject = encodeURIComponent("הזמנה חדשה מאתר יקב דורות");
+    const supplierEmail = "d0556775956@gmail.com";
+    const encodedSubject = encodeURIComponent("הזמנת ספק חדשה מאתר יקב דורות");
     let encodedBody = encodeURIComponent(body);
-    let gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&su=${encodedSubject}&body=${encodedBody}`;
-    let mailtoUrl = `mailto:?subject=${encodedSubject}&body=${encodedBody}`;
+    let gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&to=${encodeURIComponent(supplierEmail)}&su=${encodedSubject}&body=${encodedBody}`;
+    let mailtoUrl = `mailto:${supplierEmail}?subject=${encodedSubject}&body=${encodedBody}`;
 
     if (gmailUrl.length > MAX_GMAIL_URL_LENGTH || mailtoUrl.length > MAX_GMAIL_URL_LENGTH) {
       encodedBody = encodeURIComponent(truncateBody(body));
-      gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&su=${encodedSubject}&body=${encodedBody}`;
-      mailtoUrl = `mailto:?subject=${encodedSubject}&body=${encodedBody}`;
+      gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&to=${encodeURIComponent(supplierEmail)}&su=${encodedSubject}&body=${encodedBody}`;
+      mailtoUrl = `mailto:${supplierEmail}?subject=${encodedSubject}&body=${encodedBody}`;
     }
 
     const targetUrl = gmailUrl.length > MAX_GMAIL_URL_LENGTH ? mailtoUrl : gmailUrl;
@@ -1384,22 +1498,32 @@ const setupFaqAccordion = () => {
 const setupLightbox = () => {
     const modal = document.getElementById("imageModal");
     const modalImg = document.getElementById("modalImage");
+    const modalCaption = document.getElementById("modalCaption");
     const closeModal = document.querySelector(".close-modal");
-    if (!modal || !modalImg || !closeModal) return;
+    if (!modal || !modalImg || !closeModal || !modalCaption) return;
+
+    const closeLightbox = () => {
+      modal.classList.remove("open");
+      modalImg.removeAttribute("src");
+      modalCaption.textContent = "";
+    };
 
     document.querySelectorAll(".gallery-grid img").forEach((img) => {
       img.addEventListener("click", () => {
-        modal.style.display = "block";
+        modal.classList.add("open");
         modalImg.src = img.src;
+        modalCaption.textContent = img.alt || "תמונה מהגלריה";
       });
     });
 
-    closeModal.addEventListener("click", () => {
-      modal.style.display = "none";
-    });
+    closeModal.addEventListener("click", closeLightbox);
 
     window.addEventListener("click", (event) => {
-      if (event.target === modal) modal.style.display = "none";
+      if (event.target === modal) closeLightbox();
+    });
+
+    window.addEventListener("keydown", (event) => {
+      if (event.key === "Escape") closeLightbox();
     });
   };
 
