--- a/index.html
+++ b/index.html
@@ -317,11 +317,17 @@ footer p {
   width: 210px;
   height: 132px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
-  transition: transform 0.28s ease, filter 0.28s ease;
+  border: 1px solid rgba(95, 29, 47, 0.18);
+  box-shadow: 0 10px 22px rgba(53, 18, 29, 0.2);
+  transition: transform 0.28s ease, filter 0.28s ease, box-shadow 0.28s ease;
 }
-.gallery-grid img:hover { transform: scale(1.05); filter: brightness(1.03); }
+.gallery-grid img:hover {
+  transform: translateY(-4px) scale(1.04);
+  filter: brightness(1.05);
+  box-shadow: 0 18px 28px rgba(53, 18, 29, 0.24);
+}
 
 .cta-band {
   display: flex;
@@ -441,28 +447,90 @@ form button {
 
 .modal.open { display: flex; }
 
+.modal-inner {
+  position: relative;
+  width: min(95vw, 1120px);
+  padding: 1.2em;
+  border-radius: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.22);
+  background: rgba(25, 10, 16, 0.72);
+  box-shadow: 0 28px 45px rgba(0, 0, 0, 0.45);
+}
+
 .modal-content {
   display: block;
-  width: min(94vw, 980px);
-  max-height: 86vh;
+  margin: 0 auto;
+  width: min(90vw, 980px);
+  max-height: 75vh;
   object-fit: contain;
   border-radius: 12px;
 }
 
 .close-modal {
   position: absolute;
-  top: 14px;
-  right: 22px;
+  top: 8px;
+  right: 14px;
   color: #fff;
-  font-size: 40px;
+  font-size: 38px;
   cursor: pointer;
+  line-height: 1;
+}
+
+.modal-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 1px solid rgba(255, 255, 255, 0.34);
+  background: rgba(0, 0, 0, 0.45);
+  color: #fff;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+.modal-nav:hover {
+  background: rgba(0, 0, 0, 0.65);
+}
+
+.modal-prev { right: calc(100% + 12px); }
+.modal-next { left: calc(100% + 12px); }
+
+.modal-actions {
+  display: none;
+}
+
+.modal-counter {
+  margin: 0.6em 0 0;
+  color: #f8ebe0;
+  text-align: center;
+  font-size: 0.95rem;
 }
 
 .modal-caption {
   color: #fff;
   text-align: center;
-  margin-top: 0.8em;
+  margin-top: 0.25em;
   font-size: 1rem;
+}
+
+@media (max-width: 980px) {
+  .modal-inner {
+    padding: 2.9em 0.8em 1em;
+  }
+
+  .modal-prev,
+  .modal-next {
+    display: none;
+  }
+
+  .modal-actions {
+    margin-top: 0.8em;
+    display: flex;
+    justify-content: center;
+    gap: 0.8em;
+  }
 }
 
 footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); margin-top: 1.5em; }
@@ -1015,10 +1083,19 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
     </div>
   </div>
 
-  <div id="imageModal" class="modal">
-    <span class="close-modal">&times;</span>
-    <img class="modal-content" id="modalImage" alt="תמונה מוגדלת">
-    <p id="modalCaption" class="modal-caption"></p>
+  <div id="imageModal" class="modal" aria-hidden="true">
+    <div class="modal-inner">
+      <span class="close-modal" role="button" tabindex="0" aria-label="סגירת תצוגת תמונה">&times;</span>
+      <button class="modal-nav modal-prev" id="modalPrev" type="button" aria-label="תמונה קודמת">&#10095;</button>
+      <img class="modal-content" id="modalImage" alt="תמונה מוגדלת">
+      <button class="modal-nav modal-next" id="modalNext" type="button" aria-label="תמונה הבאה">&#10094;</button>
+      <p id="modalCaption" class="modal-caption"></p>
+      <p id="modalCounter" class="modal-counter"></p>
+      <div class="modal-actions">
+        <button class="modal-nav modal-prev" id="modalPrevMobile" type="button" aria-label="תמונה קודמת">&#10095;</button>
+        <button class="modal-nav modal-next" id="modalNextMobile" type="button" aria-label="תמונה הבאה">&#10094;</button>
+      </div>
+    </div>
   </div>
 
 
@@ -1382,31 +1459,68 @@ const setupLightbox = () => {
     const modal = document.getElementById("imageModal");
     const modalImg = document.getElementById("modalImage");
     const modalCaption = document.getElementById("modalCaption");
+    const modalCounter = document.getElementById("modalCounter");
     const closeModal = document.querySelector(".close-modal");
-    if (!modal || !modalImg || !closeModal || !modalCaption) return;
+    const prevButtons = [document.getElementById("modalPrev"), document.getElementById("modalPrevMobile")].filter(Boolean);
+    const nextButtons = [document.getElementById("modalNext"), document.getElementById("modalNextMobile")].filter(Boolean);
+    const galleryImages = Array.from(document.querySelectorAll(".gallery-grid img"));
+
+    if (!modal || !modalImg || !closeModal || !modalCaption || !modalCounter || !galleryImages.length) return;
+
+    let currentIndex = 0;
+
+    const renderImage = (index) => {
+      currentIndex = (index + galleryImages.length) % galleryImages.length;
+      const activeImage = galleryImages[currentIndex];
+      modalImg.src = activeImage.src;
+      modalImg.alt = activeImage.alt || "תמונה מהגלריה";
+      modalCaption.textContent = activeImage.alt || "תמונה מהגלריה";
+      modalCounter.textContent = `${currentIndex + 1} / ${galleryImages.length}`;
+    };
+
+    const openLightbox = (index) => {
+      modal.classList.add("open");
+      modal.setAttribute("aria-hidden", "false");
+      document.body.style.overflow = "hidden";
+      renderImage(index);
+    };
 
     const closeLightbox = () => {
       modal.classList.remove("open");
+      modal.setAttribute("aria-hidden", "true");
       modalImg.removeAttribute("src");
       modalCaption.textContent = "";
+      modalCounter.textContent = "";
+      document.body.style.overflow = "";
     };
 
-    document.querySelectorAll(".gallery-grid img").forEach((img) => {
-      img.addEventListener("click", () => {
-        modal.classList.add("open");
-        modalImg.src = img.src;
-        modalCaption.textContent = img.alt || "תמונה מהגלריה";
-      });
+    galleryImages.forEach((img, index) => {
+      img.addEventListener("click", () => openLightbox(index));
     });
 
+    const showPrev = () => renderImage(currentIndex - 1);
+    const showNext = () => renderImage(currentIndex + 1);
+
+    prevButtons.forEach((button) => button.addEventListener("click", showPrev));
+    nextButtons.forEach((button) => button.addEventListener("click", showNext));
+
     closeModal.addEventListener("click", closeLightbox);
+    closeModal.addEventListener("keydown", (event) => {
+      if (event.key === "Enter" || event.key === " ") {
+        event.preventDefault();
+        closeLightbox();
+      }
+    });
 
     window.addEventListener("click", (event) => {
       if (event.target === modal) closeLightbox();
     });
 
     window.addEventListener("keydown", (event) => {
+      if (!modal.classList.contains("open")) return;
       if (event.key === "Escape") closeLightbox();
+      if (event.key === "ArrowLeft") showNext();
+      if (event.key === "ArrowRight") showPrev();
     });
   };
 
