--- a/index.html
+++ b/index.html
@@ -413,6 +413,28 @@ form button {
 .cart-info { display: flex; flex-direction: column; }
 .cart-meta { color: var(--muted); font-size: 0.88em; }
 .line-total { color: var(--wine-deep); font-weight: 700; }
+.qty-controls {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.3em;
+}
+.qty-btn {
+  border: 1px solid rgba(95, 29, 47, 0.2);
+  background: #fff;
+  color: var(--wine-deep);
+  width: 30px;
+  height: 30px;
+  border-radius: 8px;
+  font-size: 1.1rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+.qty-value {
+  min-width: 20px;
+  text-align: center;
+  font-weight: 700;
+  color: var(--wine-deep);
+}
 .cart-summary { margin-top: auto; border-top: 1px solid rgba(95, 29, 47, 0.1); padding-top: 0.7em; }
 .summary-row { display: flex; justify-content: space-between; margin-bottom: 0.6em; }
 .cart-summary button {
@@ -886,21 +908,21 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
           <h3>קברנה 25</h3>
           <p>בלנד עשיר עם ניחוחות פטל, דובדבן ותבלין עדין. בחירה נהדרת לארוחות ערב חגיגיות ולשולחן של שישי.</p>
           <p class="price">₪80</p>
-          <button class="buy-btn add-to-cart" data-name="קברנה 25" data-price="80">רכישה לסל</button>
+          <button class="buy-btn add-to-cart" data-name="קברנה 25" data-price="80">הוסף לסל</button>
         </div>
         <div class="card">
           <img src="מרלו 25.png" alt="מרלו 25">
           <h3>מרלו 25</h3>
           <p>מרלו עגול, רך ומלטף עם פרי בשל וסיום נקי. מתאים במיוחד לפסטות עשירות, גבינות קשות ובשרים קלים.</p>
           <p class="price">₪80</p>
-          <button class="buy-btn add-to-cart" data-name="מרלו 25" data-price="80">רכישה לסל</button>
+          <button class="buy-btn add-to-cart" data-name="מרלו 25" data-price="80">הוסף לסל</button>
         </div>
         <div class="card">
           <img src="קברנה 24.png" alt="קברנה 24">
           <h3>קברנה 24</h3>
           <p>יין מורכב לבעלי חיך שאוהבים עומק: פרי כהה, קקאו ומגע עץ מדויק. מומלץ לסטייקים ולארוחות חג משפחתיות.</p>
           <p class="price">₪100</p>
-          <button class="buy-btn add-to-cart" data-name="קברנה 24" data-price="100">רכישה לסל</button>
+          <button class="buy-btn add-to-cart" data-name="קברנה 24" data-price="100">הוסף לסל</button>
         </div>
       </div>
     </section>
@@ -1040,7 +1062,7 @@ footer { padding: 1.8em 1.2em; color: #f7ecdf; background: var(--wine-deep); mar
         <span>סה"כ</span>
         <strong id="cart-total">₪0</strong>
       </div>
-      <button id="checkout-btn" type="button">רכוש עכשיו</button>
+      <button id="checkout-btn" type="button">רכוש</button>
     </div>
   </aside>
 
@@ -1355,16 +1377,52 @@ document.addEventListener("DOMContentLoaded", () => {
 
       info.append(nameEl, metaEl);
 
+      const qtyControls = document.createElement("div");
+      qtyControls.className = "qty-controls";
+
+      const minusBtn = document.createElement("button");
+      minusBtn.type = "button";
+      minusBtn.className = "qty-btn";
+      minusBtn.textContent = "−";
+      minusBtn.setAttribute("aria-label", `הפחתת כמות עבור ${item.name}`);
+      minusBtn.addEventListener("click", () => changeQty(index, -1));
+
+      const qtyValue = document.createElement("span");
+      qtyValue.className = "qty-value";
+      qtyValue.textContent = String(item.qty);
+
+      const plusBtn = document.createElement("button");
+      plusBtn.type = "button";
+      plusBtn.className = "qty-btn";
+      plusBtn.textContent = "+";
+      plusBtn.setAttribute("aria-label", `הוספת כמות עבור ${item.name}`);
+      plusBtn.addEventListener("click", () => changeQty(index, 1));
+
+      qtyControls.append(minusBtn, qtyValue, plusBtn);
+
       const priceEl = document.createElement("span");
       priceEl.className = "line-total";
       priceEl.textContent = currency.format(item.price * item.qty);
 
-      row.append(info, priceEl);
+      row.append(info, qtyControls, priceEl);
       cartItemsEl.appendChild(row);
     });
 
     cartTotalEl.textContent = currency.format(total);
     updateCartBadge(qty);
+  };
+
+  const changeQty = (index, delta) => {
+    const item = cartState[index];
+    if (!item) return;
+
+    item.qty += delta;
+    if (item.qty <= 0) {
+      cartState.splice(index, 1);
+      announce("המוצר הוסר מהסל");
+    }
+
+    renderCart();
   };
 
   const addToCart = (name, price) => {
@@ -1401,15 +1459,14 @@ document.addEventListener("DOMContentLoaded", () => {
       .map((item) => `${item.name} — כמות: ${item.qty} (סה״כ ${currency.format(item.price * item.qty)})`)
       .join("\n");
     const body = [
-      "שלום יקב דורות,",
-      "אני רוצה להזמין את הפריטים הבאים:",
+      "שלום וברכה,",
+      "אני מעוניין לרכוש טעינות עם השם של היין מהמוצרים הבאים:",
       itemsSummary,
       "",
-      `סה״כ לתשלום: ${currency.format(total)}`,
-      "נשמח לאישור הזמנה וחיוב.",
+      `סכום סופי: ${currency.format(total)}`,
     ].join("\n");
 
-    const encodedSubject = encodeURIComponent("הזמנת ספק חדשה מאתר יקב דורות");
+    const encodedSubject = encodeURIComponent("בקשת רכישה מאתר יקב דורות");
     let encodedBody = encodeURIComponent(body);
     let gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&to=${encodeURIComponent(supplierEmail)}&su=${encodedSubject}&body=${encodedBody}`;
 
@@ -1463,19 +1520,23 @@ const setupLightbox = () => {
     const closeModal = document.querySelector(".close-modal");
     const prevButtons = [document.getElementById("modalPrev"), document.getElementById("modalPrevMobile")].filter(Boolean);
     const nextButtons = [document.getElementById("modalNext"), document.getElementById("modalNextMobile")].filter(Boolean);
-    const galleryImages = Array.from(document.querySelectorAll(".gallery-grid img"));
+    const zoomableImages = Array.from(document.querySelectorAll("img")).filter((img) =>
+      !img.closest("#imageModal")
+      && !img.closest("#background-container")
+      && img.classList.contains("brand-logo") === false,
+    );
 
-    if (!modal || !modalImg || !closeModal || !modalCaption || !modalCounter || !galleryImages.length) return;
+    if (!modal || !modalImg || !closeModal || !modalCaption || !modalCounter || !zoomableImages.length) return;
 
     let currentIndex = 0;
 
     const renderImage = (index) => {
-      currentIndex = (index + galleryImages.length) % galleryImages.length;
-      const activeImage = galleryImages[currentIndex];
+      currentIndex = (index + zoomableImages.length) % zoomableImages.length;
+      const activeImage = zoomableImages[currentIndex];
       modalImg.src = activeImage.src;
       modalImg.alt = activeImage.alt || "תמונה מהגלריה";
       modalCaption.textContent = activeImage.alt || "תמונה מהגלריה";
-      modalCounter.textContent = `${currentIndex + 1} / ${galleryImages.length}`;
+      modalCounter.textContent = `${currentIndex + 1} / ${zoomableImages.length}`;
     };
 
     const openLightbox = (index) => {
@@ -1494,7 +1555,8 @@ const setupLightbox = () => {
       document.body.style.overflow = "";
     };
 
-    galleryImages.forEach((img, index) => {
+    zoomableImages.forEach((img, index) => {
+      img.style.cursor = "zoom-in";
       img.addEventListener("click", () => openLightbox(index));
     });
 
